CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

5 March 2008
+ XMLParser : single items were overwriting one another. Believe it is
  fixed.
+ Forward.php : more edits. Dumping .html shortcut requirement,
  checking for module status instead.

3 March 2008
+ DB_Pager : Fixed bug with joinResult and row counts. Thanks Greg.

28 February 2008
+ Added plugForward function

26 February 2008
+ checkMimeType needed a reg exp check on the mime type. Sometimes a
  server will add extra information to the end of the type so you
  wouldn't get an exact match.


25 February 2008
+ Added jquery.
+ Updated: javascript/jquery


22 February 2008
+ Removed test code from Core.php
+ Text.php - Rewrote getGetValues. Wasn't working with rewrites
+ Added Doriano to credits file


20 February 2008
+ File.php - added getVbType. Returns verbose mime type of a file.
+ Changed instructions in README for check_all.

19 February 2008
+ New standard .htaccess file
+ New file in inc/ directory: Forward.php. Handles the new mod_rewrite
  code.
+ Increase boost.php version. No update written yet.
+ File.php
  o New function getMimeType returns a mime dependent on server configuration. 
  o New function checkMimeType compares a file and its extension to
    the mime type returned by getMimeType. Returns false if they don't
    match.
+ Form.php : new function addCheckAssoc. Works like addRadioAssoc.
+ Key.php : new function getKey. Called statically, returns a key
  based on module, item name, and item id.
+ Text.php : new rewriteLink function now supports the var{n} format
  of variables.    
+ Added some more details to file_types.php
+ New information add to Forms.txt concerning associate arrays for
  radio buttons and check boxes.
+ Javascript
  o Ajax : typo fix in requester.js
  o captcha : changed <? to <?php in freecap.php 
  o trying different method of searching for checkboxes in check_all
